backend/data/kubernetes/dev/jenkins-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: jenkins-deployment
    labels:
        app: jenkins
spec:
    replicas: 1
    selector:
        matchLabels:
            app: jenkins
    template:
        metadata:
            labels:
                app: jenkins
        spec:
            volumes:
              - name: jenkins-pv-storage
                persistentVolumeClaim:
                    claimName: jenkins-pv-claim
            containers:
              - name: jenkins
                image: jenkins/jenkins:2.332-jdk11
                ports:
                  - containerPort: 8080
                  - containerPort: 50000
                volumeMounts:
                  - mountPath: /var/jenkins-home
                    name: jenkins-pv-storage
