backend/data/kubernetes/dev/pgadmin-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: pgadmin-deployment
    labels:
        app: pgadmin
spec:
    replicas: 1
    selector:
        matchLabels:
            app: pgadmin
    template:
        metadata:
            labels:
                app: pgadmin
        spec:
            containers:
              - name: pgadmin 
                image: dpage/pgadmin4:6.4
                ports:
                    - containerPort: 80
