backend/data/kubernetes/dev/pgadmin-service.yaml
apiVersion: v1
kind: Service
metadata:
    name: pgadmin
    labels:
        app: pgadmin
spec:
    type: NodePort
    ports:
        - port: 80
    selector:
        app: pgadmin
