backend/data/kubernetes/dev/jenkins-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: jenkins-ingress
spec:
    ingressClassName: nginx
    defaultBackend:
        service:
            name: jenkins
            port:
                number: 8080
    rules:
      - host: jenkins.localhost
        http:
            paths:
              - path: /
                pathType: Prefix
                backend:
                    service:
                        name: jenkins
                        port:
                            number: 8080
