backend/data/kubernetes/dev/pgadmin-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: pgadmin-ingress
spec:
    ingressClassName: nginx
    defaultBackend:
        service:
            name: pgadmin
            port:
                number: 80
    rules:
      - host: pgadmin.localhost
        http:
            paths:
              - path: /
                pathType: Prefix
                backend:
                    service:
                        name: pgadmin
                        port:
                            number: 80
